@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.L0RE.dmax" name="DMAX Mediathek" version="1.0.6" provider-name="L0RE">
+<addon id="plugin.video.L0RE.dmax" name="DMAX Mediathek" version="1.0.7" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="service.L0RE.cron" version="1.0.1" optional="true"/>
@@ -25,10 +25,9 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.0.6+1.0.5  (30.06.2019)[/COLOR][/B] by realvito[CR]
-- returned: Änderungen in Zeile 638 verworfen !!!
-- fixed: UnicodeDecodeError: 'ascii' codec can't decode...
-- optimized: Serienordner mit neuen Episoden - gekennzeichnet (@mobsean)
+		<news>[B][COLOR orangered]Version 1.0.7  (17.08.2019)[/COLOR][/B] by realvito[CR]
+- fixed: Rubrik = Themen - Ordner ist leer
+- added: Weitere Sortiermethoden für Episoden u.a. Name, Datum, Dauer (settings)
 		</news>
 	</extension>
 </addon>
