@@ -32,3 +32,7 @@
 - returned: Änderungen in Zeile 638 verworfen !!!
 - fixed: UnicodeDecodeError: 'ascii' codec can't decode...
 - optimized: Serienordner mit neuen Episoden - gekennzeichnet (@mobsean)
+
+[B]Version 1.0.7  (17.08.2019)[/B] by realvito[CR]
+- fixed: Rubrik = Themen - Ordner ist leer
+- added: Weitere Sortiermethoden für Episoden u.a. Name, Datum, Dauer (settings)
